# humancheck

./: .gitignore  :memory:  CONNECTORS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PREVIEW_LAYER_README.md  QUICKSTART.md  QUICK_TEST.md  README.md  check_decisions.py  fix_review_statuses.py  humancheck.example.yaml  init_connector_tables.py  pyproject.toml  test_db.py  test_hitl_integration.py  test_preview_layer.py
examples/: README_HITL.md  README_PLATFORM.md  basic_agent.py  connector_integration.py  langchain_hitl_example.py  langchain_integration.py  langchain_platform_example.py
frontend/: streamlit_app.py
src/humancheck/: __init__.py  __main__.py  api.py  config.py  connector_manager.py  connector_models.py  database.py  mcp_server.py  models.py  platform_models.py  routing.py  schemas.py
src/humancheck/adapters/: __init__.py  base.py  langchain.py  langchain_adapter.py  langchain_hitl.py  mastra_adapter.py  registry.py
src/humancheck/api/: __init__.py  app.py  dependencies.py
src/humancheck/api/routes/: __init__.py  attachments.py  decisions.py  feedback.py  reviews.py  stats.py
src/humancheck/connectors/: __init__.py  base.py  slack.py
src/humancheck/core/: __init__.py
src/humancheck/core/adapters/: base.py  langchain.py  mcp_adapter.py  rest_adapter.py
src/humancheck/core/config/: settings.py
src/humancheck/core/file_storage/: __init__.py  manager.py
src/humancheck/core/integrations/: __init__.py  base.py  manager.py
src/humancheck/core/integrations/slack/: __init__.py  client.py
src/humancheck/core/models/: __init__.py  assignment.py  attachment.py  connector.py  decision.py  feedback.py  review.py
src/humancheck/core/routing/: engine.py  evaluator.py
src/humancheck/core/schemas/: __init__.py  decision.py  feedback.py  review.py
src/humancheck/core/security/: content_validator.py
src/humancheck/dashboard/: __init__.py  preview.py
src/humancheck/routing/: __init__.py  engine.py
src/humancheck/security/: __init__.py
src/humancheck/storage/: __init__.py  base.py  local.py
src/humancheck/tools/: __init__.py  check_status.py  get_decision.py  request_review.py  submit_feedback.py
storage/reviews/11/attachments/: test_text.md
tests/: __init__.py  conftest.py  test_api.py  test_backward_compatibility.py  test_repositories.py
