[tool.poetry]
name = "humancheck"
version = "0.1.0"
description = "A universal human-in-the-loop operations platform for AI agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "humancheck", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
greenlet = "^3.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.5.0"
streamlit = "^1.28.0"
click = "^8.1.7"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
anyio = "^4.0.0"
alembic = "^1.13.0"
python-multipart = "^0.0.9"
python-dateutil = "^2.8.2"
mcp = "^1.0.0"
slack-sdk = "^3.27.0"
aiohttp = "^3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.5.0"
mypy = "^1.8.0"
httpx = "^0.27.0"

[tool.poetry.group.langchain]
optional = true

[tool.poetry.group.langchain.dependencies]
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"

[tool.poetry.scripts]
humancheck = "humancheck.__main__:cli"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
